--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/core": "6.0.1",
+    "@awesome-cordova-plugins/geolocation": "^6.1.0",
     "@awesome-cordova-plugins/sqlite": "6.0.1",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.3.0",
+    "@capacitor/geolocation": "4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/ios": "4.3.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
@@ -50,6 +53,7 @@
     "@capacitor/cli": "4.3.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/cli": "6.20.3",
+    "@ionic/cordova-builders": "7.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -71,5 +75,10 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.7.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {}
+    }
+  }
 }
