--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/core": "6.0.1",
-    "@awesome-cordova-plugins/geolocation": "^6.1.0",
+    "@awesome-cordova-plugins/geolocation": "6.2.0",
     "@awesome-cordova-plugins/sqlite": "6.0.1",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
@@ -30,7 +30,6 @@
     "@capacitor/ios": "4.3.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
@@ -75,10 +74,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.7.3"
   },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-geolocation": {}
-    }
-  }
+  "description": "An Ionic project"
 }
