--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@awesome-cordova-plugins/core": "6.0.1",
     "@awesome-cordova-plugins/geolocation": "6.2.0",
     "@awesome-cordova-plugins/sqlite": "6.0.1",
-    "@capacitor/android": "4.3.0",
+    "@capacitor/android": "^4.3.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.3.0",
     "@capacitor/geolocation": "4.0.1",
